Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/expression/NullAppend2.out
NullAppend2.java:10:21: compiler.err.operator.cant.be.applied.1: +, compiler.misc.type.null, int
1 error
